--- a/react-src/src/pages/HomePage/style.scss
+++ b/react-src/src/pages/HomePage/style.scss
@@ -9,11 +9,11 @@
 .hi {
   padding: 0 10px;
   width: 50%;
-}
 
-.hi p {
-  margin: 0;
-  padding: 5px 0;
+  p {
+    margin: 0;
+    padding: 5px 0;
+  }
 }
 
 .me {
