--- a/react-src/src/components/Social/styles.scss
+++ b/react-src/src/components/Social/styles.scss
@@ -2,21 +2,21 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-}
 
-.social a {
-  background-size: contain;
-  opacity: 0.8;
-  text-decoration: none;
-  width: 30px;
-  height: 30px;
+  a {
+    background-size: contain;
+    opacity: 0.8;
+    text-decoration: none;
+    width: 30px;
+    height: 30px;
 
-  transition: opacity 0.1s;
-}
+    transition: opacity 0.1s;
 
-.social a:hover,
-.social a:active {
-  opacity: 1;
+    &:hover,
+    &:active {
+      opacity: 1;
+    }
+  }
 }
 
 .instagram {
